[GTK] WebProcess shouldn't use the GTK+ API https://bugs.webkit.org/show_bug.cgi?id=68062

Reviewed by Martin Robinson.

Source/WebCore:

Move errors code that is common between webki1 and webkit2 to
WebCore so that it can be shared.

* GNUmakefile.list.am: Add new files to compilation.
* platform/gtk/ErrorsGtk.cpp: Added.
(WebCore::cancelledError):
(WebCore::blockedError):
(WebCore::cannotShowURLError):
(WebCore::interruptedForPolicyChangeError):
(WebCore::cannotShowMIMETypeError):
(WebCore::fileDoesNotExistError):
(WebCore::pluginWillHandleLoadError):
* platform/gtk/ErrorsGtk.h: Added.

Source/WebKit/gtk:

Use WebCore API to create errors in frame loader.

* WebCoreSupport/AssertMatchingEnums.cpp:
* WebCoreSupport/FrameLoaderClientGtk.cpp:
(WebKit::FrameLoaderClient::cancelledError):
(WebKit::FrameLoaderClient::blockedError):
(WebKit::FrameLoaderClient::cannotShowURLError):
(WebKit::FrameLoaderClient::interruptedForPolicyChangeError):
(WebKit::FrameLoaderClient::cannotShowMIMETypeError):
(WebKit::FrameLoaderClient::fileDoesNotExistError):
(WebKit::FrameLoaderClient::pluginWillHandleLoadError):
* webkit/webkiterror.cpp:
(webkit_network_error_quark):
(webkit_policy_error_quark):
(webkit_plugin_error_quark):

Source/WebKit/gtk/po:

* POTFILES: Remove FrameLoaderGtk.cpp and add ErrorsGtk.cpp.

Source/WebKit2:

Use WebCore API to create errors in WebProcess.

* GNUmakefile.am: Don't use webkit/webkierror.h.
* WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:
(WebKit::cancelledError):
(WebKit::blockedError):
(WebKit::cannotShowURLError):
(WebKit::interruptedForPolicyChangeError):
(WebKit::cannotShowMIMETypeError):
(WebKit::fileDoesNotExistError):
(WebKit::pluginWillHandleLoadError):

Canonical link: https://commits.webkit.org/84368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95521 268f45cc-cd09-0410-ab3c-d52691b4dbfc