Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp
@@ -34,6 +34,7 @@
 #include "DOMObjectCache.h"
 #include "DocumentLoader.h"
 #include "DocumentLoaderGtk.h"
+#include "ErrorsGtk.h"
 #include "FormState.h"
 #include "FrameLoader.h"
 #include "FrameNetworkingContextGtk.h"
@@ -1132,44 +1133,37 @@ void FrameLoaderClient::download(ResourceHandle* handle, const ResourceRequest& 
 
 ResourceError FrameLoaderClient::cancelledError(const ResourceRequest& request)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_NETWORK_ERROR), WEBKIT_NETWORK_ERROR_CANCELLED,
-                         request.url().string(), _("Load request cancelled"));
+    return WebCore::cancelledError(request);
 }
 
 ResourceError FrameLoaderClient::blockedError(const ResourceRequest& request)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_POLICY_ERROR), WEBKIT_POLICY_ERROR_CANNOT_USE_RESTRICTED_PORT,
-                         request.url().string(), _("Not allowed to use restricted network port"));
+    return WebCore::blockedError(request);
 }
 
 ResourceError FrameLoaderClient::cannotShowURLError(const ResourceRequest& request)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_POLICY_ERROR), WEBKIT_POLICY_ERROR_CANNOT_SHOW_URL,
-                         request.url().string(), _("URL cannot be shown"));
+    return WebCore::cannotShowURLError(request);
 }
 
 ResourceError FrameLoaderClient::interruptedForPolicyChangeError(const ResourceRequest& request)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_POLICY_ERROR), WEBKIT_POLICY_ERROR_FRAME_LOAD_INTERRUPTED_BY_POLICY_CHANGE,
-                         request.url().string(), _("Frame load was interrupted"));
+    return WebCore::interruptedForPolicyChangeError(request);
 }
 
 ResourceError FrameLoaderClient::cannotShowMIMETypeError(const ResourceResponse& response)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_POLICY_ERROR), WEBKIT_POLICY_ERROR_CANNOT_SHOW_MIME_TYPE,
-                         response.url().string(), _("Content with the specified MIME type cannot be shown"));
+    return WebCore::cannotShowMIMETypeError(response);
 }
 
 ResourceError FrameLoaderClient::fileDoesNotExistError(const ResourceResponse& response)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_NETWORK_ERROR), WEBKIT_NETWORK_ERROR_FILE_DOES_NOT_EXIST,
-                         response.url().string(), _("File does not exist"));
+    return WebCore::fileDoesNotExistError(response);
 }
 
 ResourceError FrameLoaderClient::pluginWillHandleLoadError(const ResourceResponse& response)
 {
-    return ResourceError(g_quark_to_string(WEBKIT_PLUGIN_ERROR), WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD,
-                         response.url().string(), _("Plugin will handle load"));
+    return WebCore::pluginWillHandleLoadError(response);
 }
 
 bool FrameLoaderClient::shouldFallBack(const ResourceError& error)
