Source/WebKit/gtk/webkit/webkiterror.cpp
@@ -18,20 +18,21 @@
  */
 
 #include "config.h"
-
 #include "webkiterror.h"
+
+#include "ErrorsGtk.h"
 
 GQuark webkit_network_error_quark(void)
 {
-    return g_quark_from_static_string("webkit-network-error-quark");
+    return g_quark_from_static_string(WebCore::errorDomainNetwork);
 }
 
 GQuark webkit_policy_error_quark(void)
 {
-    return g_quark_from_static_string("webkit-policy-error-quark");
+    return g_quark_from_static_string(WebCore::errorDomainPolicy);
 }
 
 GQuark webkit_plugin_error_quark(void)
 {
-    return g_quark_from_static_string("webkit-plugin-error-quark");
+    return g_quark_from_static_string(WebCore::errorDomainPlugin);
 }
